--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ name: Deploy inhouse-bot
 # Controls when the action will run.
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -31,7 +31,7 @@ jobs:
         password: ${{ secrets.DEPLOY_PASSWORD }}
         script: |
           cd ~/inhouse-bot
-          git reset --hard master
-          git pull origin master
+          git reset --hard main
+          git pull origin main
           pm2 restart inhouse-bot --update-env
 
