--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+## bot will create the following files if they don't exist
+prevteams.json
+prevmaps.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
